force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Target_Item__c/Plant_Shop_Target_Item__c.object-meta.xml
<CustomObject>
    <description>Saves the valid draft shop level data for the adjustment made on a target.</description>
    <label>Plant Shop Target Item</label>
    <nameField>
        <displayFormat>PSTI-{000000}</displayFormat>
        <label>Plant Shop Target Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Shop Target Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>