force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Target_Item__c/fields/Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>