force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Shop_Target_Item__c/fields/Plant_Shop_Target__c.field-meta.xml
<CustomField>
    <fullName>Plant_Shop_Target__c</fullName>
    <label>Plant Shop Target</label>
    <referenceTo>Plant_Shop_Target__c</referenceTo>
    <relationshipLabel>Plant Shop Target Items</relationshipLabel>
    <relationshipName>Plant_Position_Adjustment_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>